# handler/category/request.go
@@ -5,7 +5,8 @@ import (
 )
 
 type CreateCategoryRequest struct {
-	Title string `json:"title"`
+	Title  string `json:"title"`
+	UserID uint   `json:"user_id"`
 }
 
 func (r CreateCategoryRequest) Validate() error {
@@ -13,6 +14,23 @@ func (r CreateCategoryRequest) Validate() error {
 	if r.Title == "" {
 		return helper.ErrParamIsRequired("title", "string")
 	}
-	
+
+	if r.UserID == 0 {
+		return helper.ErrParamIsRequired("user_id", "uint")
+	}
+
+	return nil
+}
+
+type UpdateCategoryRequest struct {
+	Title string `json:"title"`
+}
+
+func (r UpdateCategoryRequest) Validate() error {
+
+	if r.Title == "" {
+		return helper.ErrParamIsRequired("title", "string")
+	}
+
 	return nil
 }
